kiali/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: istio-system
spec:
  tls:
  - hosts:
      - dashboard.k-tech.cloud
    secretName: dashboard-secret
  ingressClassName: nginx
  rules:
  - host: dashboard.k-tech.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiali
            port:
              number: 20001
